fix problem in database queries

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 ENVIRONMENT = "development"
 SESSION_SERVICE="php"
+REGISTER_SERVICE="default"
+SECRET_KEY="The secret key"
+TOKEN_ISSUER="localhost"
 DATA_ACCESS="mysql"
-DATABASE_ADDRESS ="192.168.1.98:3306"
+DATABASE_ADDRESS ="192.168.1.133:3306"
+DB_NAME="teachingsystemdb"
+USERNAME="root"
+PASSWORD=""
